Fix badge spacing

--- a/src/app.css
+++ b/src/app.css
@@ -50,7 +50,7 @@ md-card {
 
 md-card .top-left {
   position: absolute;
-  left: 0.75em;
+  left: 0.5em;
   top: 0.5em;
 }
 
